# crate-vector-quaternion-matrix

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  katex-header.html  rust-toolchain.toml
benches/: math_bench.rs  matrix_bench.rs  vq_bench.rs
src/: CHANGELOG.md  eigen3x3.rs  lib.rs  math_constants.rs  math_functions.rs  math_methods.rs  matrix2x2.rs  matrix2x2_math.rs  matrix3x3.rs  matrix3x3_math.rs  quaternion.rs  quaternion_math.rs  sensor_fusion_math.rs  sqrt_methods.rs  vector2d.rs  vector2d_math.rs  vector3d.rs  vector3d_math.rs  vector3d_simd.rs  vector4d.rs  vector4d_math.rs
tests/: matrix2x2.rs  matrix3x3.rs  quaternion.rs  vector2d.rs  vector3d.rs
