[package]
name = "vector-quaternion-matrix"
version = "0.1.0"
edition = "2024"
authors = ["Martin Budden"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = ["rp2350", "align", "libm", "simd",]
#default = ["rp2040", "align", "libm",]
#default = ["rp2040", "libm",]
std = []
align = []
rp2040 = []
rp2350 = []
simd = []
libm = []

[target.thumbv8m.main-none-eabihf]
rustflags = [
    "-C", "target-cpu=cortex-m33",
    "-C", "target-feature=+fp-armv8d16sp", # This enables the specific floating-point features for the M33
    "-C", "target-feature=+vfp4sp", # Enables single-precision FPU
]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[dependencies]
libm = { version = "0.2.2" } # libm is required for sqrt and trigonometric functions in no_std
num-traits = "0.2.19"
bytemuck = { version = "1.24", features = ["derive"] }
cfg-if = "1.0"
approx = "0.5.1"

[dev-dependencies]
# assert_float_eq = "1.2.0" # used for test

# see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0
debug = true
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true
