[package]
name = "vector-quaternion-matrix"
version = "0.1.0"
edition = "2024"
authors = ["Martin Budden"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = ["libm",]
#default = ["libm", "simd",]
#default = ["libm", "no_align"]
std = []
no_align = []
simd = []
libm = []


# Note the RP2350 uses thumbv8m and the RP2040 uses thumbv6m.
# RP2350: thumbv8m.main-none-eabihf (Cortex-M33, ARMv8-M, Hard Float)
# RP2040: thumbv6m-none-eabi (Cortex-M0+, ARMv6-M, Soft Float)

# used by RP2040
[target.thumbv6m-none-eabi]
rustflags = [
    "-C", "target-cpu=cortex-m0plus",
]

# used by RP2350
[target.thumbv8m.main-none-eabihf] # hf = Hard Float
rustflags = [
    "-C", "target-cpu=cortex-m33",
    # No need to manually specify +vfp4sp or +fp-armv8d16sp; 
    # cortex-m33 + eabihf target handles this automatically.
    # "-C", "target-feature=+fp-armv8d16sp", # This enables the specific floating-point features for the M33
    # "-C", "target-feature=+vfp4sp", # Enables single-precision FPU
]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[build-dependencies]
rustc_version = "0.4"

[dependencies]
libm = { version = "0.2.2" } # libm is required for sqrt and trigonometric functions in no_std
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
cfg-if = "1.0"
approx = "0.5.1"

[dev-dependencies]
# assert_float_eq = "1.2.0" # used for test

# see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0
debug = true
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true
