[package]
name = "vector-quaternion-matrix"
version = "0.1.0"
edition = "2024"
authors = ["Martin Budden"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/martinbudden/crate-vector-quaternion-matrix"
description = "A vector, quaternion, and matrix library targeted at embedded systems and robotics."
keywords = ["3D", "vector", "quaternion", "matrix", "Euler angles", "no-std"]
categories = [
    "Embedded development",
    "Mathematics",
    "No standard library",
    "Robotics",
    "Science",
]

[features]
default = ["libm"]
#default = ["libm", "simd",]
#default = ["libm", "no_align"]
std = []
libm = ["num-traits/libm"]
no_align = []
simd = []


# Note the RP2350 uses thumbv8m and the RP2040 uses thumbv6m.
# RP2350: thumbv8m.main-none-eabihf (Cortex-M33, ARMv8-M, Hard Float)
# RP2040: thumbv6m-none-eabi (Cortex-M0+, ARMv6-M, Soft Float)

# used by RP2040
[target.thumbv6m-none-eabi]
rustflags = ["-C", "target-cpu=cortex-m0plus"]

# used by RP2350
[target.thumbv8m.main-none-eabihf] # hf = Hard Float
rustflags = [
    "-C",
    "target-cpu=cortex-m33",
    # No need to manually specify +vfp4sp or +fp-armv8d16sp; 
    # cortex-m33 + eabihf target handles this automatically.
    # "-C", "target-feature=+fp-armv8d16sp", # This enables the specific floating-point features for the M33
    # "-C", "target-feature=+vfp4sp", # Enables single-precision FPU
]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[build-dependencies]
rustc_version = "0.4"

[dependencies]
libm = { version = "0.2.2" }                                  # libm is required for num_traits, sqrt, and trigonometric functions in no_std
num-traits = { version = "0.2.19", default-features = false }
cfg-if = "1.0"
approx = "0.5.1"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
rand = "0.10.1" 
approx = { version = "0.5", default-features = false }
filters = { git = "https://github.com/martinbudden/crate-filters"}

# see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0
debug = true
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true

[[bench]]
name = "matrix_bench"
harness = false

[[bench]]
name = "vq_bench"
harness = false
